changed from frontend to todo ofc..

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,14 +30,14 @@ jobs:
       run: npm test
 
     - name: Build Docker image
-      run: docker build -t vedmastaren/frontend . # Ändrat till vedmastaren/frontend
+      run: docker build -t vedmastaren/todo . # Ändrat till vedmastaren/todo
 
     - name: Read version from version.md
       id: version
       run: echo "VERSION=$(cat version.md)" >> $GITHUB_ENV
 
     - name: Tag Docker image with version
-      run: docker tag vedmastaren/frontend:latest vedmastaren/frontend:v${{ env.VERSION }} # Ändrat till vedmastaren/frontend
+      run: docker tag vedmastaren/todo:latest vedmastaren/todo:v${{ env.VERSION }} # Ändrat till vedmastaren/todo
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -46,14 +46,14 @@ jobs:
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Push Docker image to Docker Hub
-      run: docker push vedmastaren/frontend:v${{ env.VERSION }} # Ändrat till vedmastaren/frontend
+      run: docker push vedmastaren/todo:v${{ env.VERSION }} # Ändrat till vedmastaren/todo
 
     - name: Add tag to commit
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
         git tag -a v${{ env.VERSION }} -m "Release v${{ env.VERSION }}"
-        git push https://github-actions:${GH_PAT}@github.com/Vedmastaren/DevOps1FE.git v${{ env.VERSION }}
+        git push https://github-actions:${GH_PAT}@github.com/Vedmastaren/DevOps1BE-todo.git v${{ env.VERSION }}
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
