--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "build": "tsc",
     "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\"",
-    "test": "npx jest --coverage"
+    "prod": "node dist/js/app.js",
+    "test": "npx jest --coverage",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
     "node-fetch": "^3.3.2"
@@ -26,7 +29,10 @@
     "@types/mock-req-res": "^1.1.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.11",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
     "concurrently": "^8.2.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-testing-library": "^6.2.2",
     "jest": "^29.7.0",
     "mock-req-res": "^1.2.1",
     "mongodb-memory-server": "^9.1.8",
