--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,6 +29,12 @@ jobs:
     - name: Run Automated Tests
       run: npm test
 
+    - name: Install plugin
+      run: npm install --save-dev eslint-plugin-testing-library
+
+    - name: Run ESLint
+      run: npm run lint
+
     - name: Build Docker image
       run: docker build -t vedmastaren/todo . # Ändrat till vedmastaren/todo
 
