--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,36 +1,37 @@
+# Namnet på arbetsflödet
 name: Code Coverage
 
 on: [pull_request]
 
 jobs:
   build:
-
+# Gör att triggas igång varje gång någon gör en pull request
     runs-on: ubuntu-latest
-
+# Kör på den senaste versionen av Ubuntu 
     strategy:
       matrix:
         node-version: [22.x]
-
+# Kör jobbet i Node.js version 22.x
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-
+# Checkar ut källkoden från det aktuella repositoryt
     - name: Set up Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-        
+# Sätter upp Node.js enligt den angivna versionen som angivits innan
     - name: Install dependencies
       run: npm install
-
+# Installerar alltig som behövs för att kunna köra testet    
     - name: Run the tests
       run: npm test
-
+# Kör igång själva testet
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-
+# Laddar upp kodtäcknings raporten till Codecov
     - name: Post success to Slack
       if: success()
       id: slack_success
@@ -40,7 +41,7 @@ jobs:
         slack-message: "Coverage test success for PR #${{ github.event.number }} by ${{ github.event.pull_request.user.login }}: ${{ github.event.pull_request.html_url }}"
       env:
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_TOKEN }}
-
+# Om testerna lyckas så skickas ett meddelande till en slack kanal
     - name: Post failure to Slack
       if: failure()
       id: slack_failure
@@ -50,3 +51,4 @@ jobs:
         slack-message: "Coverage test failed for PR #${{ github.event.number }} by ${{ github.event.pull_request.user.login }}: ${{ github.event.pull_request.html_url }}"
       env:
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_TOKEN }}
+# Skickar ett meddelande till en slcak kanal om testerna misslyckas med lite info om vad som misslyckades.
